# unknown_wm

./: .clang-format  .clangd  CMakeLists.txt  README  build.sh  fmt  reconfigure.sh  run.sh  xinitrc
.cache/clangd/index/: addon.c.A15D176DDAC50AAD.idx  addon.h.D1515FA26EC40B8C.idx  allocator.c.0C0F4177939887DC.idx  allocator.h.0AE635BF00B55C06.idx  allocator.h.A9D9496985BEC2C2.idx  array.c.91EAF70410A386C0.idx  array.h.95C8754ABD20A291.idx  atomic.c.1ABCC53BA477925D.idx  backend.c.042916AB2CE12EBE.idx  backend.c.17CBD083D5303549.idx  backend.c.416CE996BBB2D1C3.idx  backend.c.45D5E55BE251991E.idx  backend.c.6BA5D9A62306E48A.idx  backend.c.A04AC9C149073EED.idx  backend.c.DA8352C1CB1951EB.idx  backend.h.38C3C098D1825DA8.idx  backend.h.682CFD2E4B980F44.idx  box.c.5B69EA4EF54E973F.idx  box.h.EF87AC16762FAD45.idx  buffer.c.F1DF696DFC1016A2.idx  cairo-buffer.c.04E1DF605468FD3D.idx  cat.c.D4BA1C31BD91A317.idx  cat.h.9EC4D1D0DE4F9B0D.idx  client.c.76FE6F8B3A29C72D.idx  color.c.D9FBF124AA0549F1.idx  color.h.67F0171098F0926C.idx  color.h.E023A334A23CFB3E.idx  color_fallback.c.7291BBAC35FEBF9E.idx  color_lcms2.c.25E4D7469D469DB2.idx  connection.h.5F052D0C64375695.idx  cursor.c.6A74E3963FC5C6F7.idx  cursor_data.h.5C632DB30EE60366.idx  dmabuf.c.2AF31A01E75F135D.idx  dmabuf.c.9021B984CEE97012.idx  dmabuf.h.234980291E2E54ED.idx  dmabuf.h.2B385CF02C512911.idx  dmabuf_linux.c.D605638BF1DDB0E2.idx  dnd.c.B4B763731AB838CF.idx  drag_icon.c.788BFE0989BB8734.idx  drm.c.9127E34D2416E59C.idx  (+327 more)
cmake_build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
src/: actions.h  config.h  connection.cpp  connection.h  event.cpp  event.h  ewmh.cpp  ewmh.h  keys.h  logging.h  main.cpp  monitor.cpp  monitor.h  type_utils.h  types.h  window.h  window_manager.cpp  window_manager.h  xcb_utils.h
